--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "precommit": "yarn run pretty"
   },
   "engines": {
-    "node": "8.11.4"
+    "node": "8.11.4",
+    "npm": "6.7"
   },
   "browsers": [
     "last 3 chrome versions",
