--- a/package.json
+++ b/package.json
@@ -50,15 +50,14 @@
     "shopify-api-node": "^2.11.0",
     "sqlite3": "^3.1.9",
     "url": "^0.11.0",
-    "webpack-hot-middleware": "^2.18.0",
     "webpack-middleware": "^1.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -71,6 +70,8 @@
     "react-hot-loader": "^3.0.0-beta.7",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-middleware": "^3.5.2",
+    "webpack-dev-server": "^2.11.3",
+    "webpack-hot-middleware": "^2.24.3"
   }
 }
