--- a/package.json
+++ b/package.json
@@ -27,20 +27,20 @@
   ],
   "dependencies": {
     "@shopify/polaris": "^2.3.1",
-    "@shopify/shopify-express": "^1.0.0-alpha.7",
+    "@shopify/shopify-express": "^1.0.0-alpha.8",
     "chalk": "^1.1.3",
     "connect-redis": "^3.3.0",
     "cross-env": "^5.1.3",
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
     "ejs": "~2.5.6",
-    "express": "~4.15.2",
+    "express": "^4.16.4",
     "express-session": "^1.15.3",
     "knex": "^0.13.0",
-    "morgan": "~1.8.1",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "morgan": "^1.9.1",
     "nodemon": "^1.17.1",
+    "react": "^16.8.1",
+    "react-dom": "^16.4.0",
     "react-object-inspector": "^0.2.1",
     "react-redux": "^5.0.5",
     "redis": "^2.7.1",
@@ -54,11 +54,11 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
-    "babel-core": "^6.25.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.5.2",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
@@ -69,7 +69,8 @@
     "prettier": "^1.5.2",
     "react-hot-loader": "^3.0.0-beta.7",
     "style-loader": "^0.18.2",
-    "webpack": "^2.6.1",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-middleware": "^3.5.2",
     "webpack-dev-server": "^2.11.3",
     "webpack-hot-middleware": "^2.24.3"
