--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@shopify/polaris": "^2.3.1",
     "@shopify/shopify-express": "^1.0.0-alpha.8",
+    "acorn": "^6.0.7",
     "chalk": "^1.1.3",
     "connect-redis": "^3.3.0",
     "cross-env": "^5.1.3",
@@ -39,7 +40,6 @@
     "knex": "^0.13.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.17.1",
-    "webpack": "^4.29.3",
     "react": "^16.8.1",
     "react-dom": "^16.4.0",
     "react-object-inspector": "^0.2.1",
@@ -51,6 +51,7 @@
     "shopify-api-node": "^2.11.0",
     "sqlite3": "^3.1.9",
     "url": "^0.11.0",
+    "webpack": "^4.29.3",
     "webpack-middleware": "^1.5.1"
   },
   "devDependencies": {
