--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "shopify-api-node": "^2.11.0",
+    "sqlite3": "4.0.2",
     "url": "^0.11.0",
     "webpack": "^4.29.3",
     "webpack-middleware": "^1.5.1"
