--- a/package.json
+++ b/package.json
@@ -31,44 +31,43 @@
     "acorn": "^6.0.7",
     "chalk": "^1.1.3",
     "connect-redis": "^3.3.0",
-    "cross-env": "^5.1.3",
+    "cross-env": "^5.2.0",
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
-    "ejs": "~2.5.6",
+    "ejs": "^2.5.9",
     "express": "^4.16.4",
     "express-session": "^1.15.3",
     "knex": "^0.13.0",
     "morgan": "^1.9.1",
-    "nodemon": "^1.17.1",
+    "nodemon": "^1.18.9",
     "react": "^16.8.1",
-    "react-dom": "^16.4.0",
+    "react-dom": "^16.8.1",
     "react-object-inspector": "^0.2.1",
-    "react-redux": "^5.0.5",
+    "react-redux": "^5.1.1",
     "redis": "^2.7.1",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
-    "shopify-api-node": "^2.11.0",
+    "redux-thunk": "^2.3.0",
+    "shopify-api-node": "^2.18.1",
     "sqlite3": "4.0.2",
     "url": "^0.11.0",
-    "webpack": "^4.29.3",
     "webpack-middleware": "^1.5.1"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.1",
+    "autoprefixer": "^7.2.6",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.4",
+    "css-loader": "^0.28.11",
     "eslint": "3.19.0",
-    "eslint-plugin-prettier": "^2.1.2",
+    "eslint-plugin-prettier": "^2.7.0",
     "global": "^4.3.2",
-    "postcss-loader": "^2.0.6",
-    "prettier": "^1.5.2",
+    "postcss-loader": "^2.1.6",
+    "prettier": "^1.16.4",
     "react-hot-loader": "^3.0.0-beta.7",
     "style-loader": "^0.18.2",
     "webpack": "^4.29.3",
