--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "sqlite3": "4.0.2",
     "url": "^0.11.0",
     "webpack": "^4.29.3",
+    "webpack-dev-server": "^2.11.3",
+    "webpack-hot-middleware": "^2.24.3",
     "webpack-middleware": "^1.5.1"
   },
   "devDependencies": {
@@ -71,9 +73,6 @@
     "prettier": "^1.16.4",
     "react-hot-loader": "^3.0.0-beta.7",
     "style-loader": "^0.18.2",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-middleware": "^3.5.2",
-    "webpack-dev-server": "^2.11.3",
-    "webpack-hot-middleware": "^2.24.3"
+    "webpack-cli": "^3.2.3"
   }
 }
