--- a/package.json
+++ b/package.json
@@ -35,6 +35,22 @@
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.9",
+    "autoprefixer": "^7.2.6",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "eslint": "3.19.0",
+    "eslint-plugin-prettier": "^2.7.0",
+    "global": "^4.3.2",
+    "postcss-loader": "^2.1.6",
+    "prettier": "^1.16.4",
+    "react-hot-loader": "^3.0.0-beta.7",
+    "style-loader": "^0.18.2",
     "express": "^4.16.4",
     "express-session": "^1.15.3",
     "knex": "^0.13.0",
@@ -60,21 +76,6 @@
     "webpack-middleware": "^1.5.1"
   },
   "devDependencies": {
-    "autoprefixer": "^7.2.6",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "eslint": "3.19.0",
-    "eslint-plugin-prettier": "^2.7.0",
-    "global": "^4.3.2",
-    "postcss-loader": "^2.1.6",
-    "prettier": "^1.16.4",
-    "react-hot-loader": "^3.0.0-beta.7",
-    "style-loader": "^0.18.2"
+
   }
 }
