--- a/package.json
+++ b/package.json
@@ -29,12 +29,6 @@
     "@shopify/polaris": "^2.3.1",
     "@shopify/shopify-express": "^1.0.0-alpha.8",
     "acorn": "^6.0.7",
-    "chalk": "^1.1.3",
-    "connect-redis": "^3.3.0",
-    "cross-env": "^5.2.0",
-    "debug": "~2.6.3",
-    "dotenv": "^4.0.0",
-    "ejs": "^2.5.9",
     "autoprefixer": "^7.2.6",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
@@ -43,21 +37,27 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "chalk": "^1.1.3",
+    "connect-redis": "^3.3.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
+    "debug": "~2.6.3",
+    "dotenv": "^4.0.0",
+    "ejs": "^2.5.9",
     "eslint": "3.19.0",
     "eslint-plugin-prettier": "^2.7.0",
-    "global": "^4.3.2",
-    "postcss-loader": "^2.1.6",
-    "prettier": "^1.16.4",
-    "react-hot-loader": "^3.0.0-beta.7",
-    "style-loader": "^0.18.2",
     "express": "^4.16.4",
     "express-session": "^1.15.3",
+    "global": "^4.3.2",
     "knex": "^0.13.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.9",
+    "pg": "^7.8.0",
+    "postcss-loader": "^2.1.6",
+    "prettier": "^1.16.4",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-hot-loader": "^3.0.0-beta.7",
     "react-object-inspector": "^0.2.1",
     "react-redux": "^5.1.1",
     "redis": "^2.7.1",
@@ -66,16 +66,14 @@
     "redux-thunk": "^2.3.0",
     "shopify-api-node": "^2.18.1",
     "sqlite3": "4.0.2",
+    "style-loader": "^0.18.2",
     "url": "^0.11.0",
-    "webpack-cli": "^3.2.3",
-    "react-hot-loader": "^3.0.0-beta.7",
     "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-middleware": "^3.5.2",
     "webpack-dev-server": "^2.11.3",
     "webpack-hot-middleware": "^2.24.3",
     "webpack-middleware": "^1.5.1"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
